# LearningFundamentalsOfComputerGraphic

./: .gitignore  .gitmodules  CMakeLists.txt  LearningFundamentalsOfComputerGraphic.sln  ReadMe.md
CommonClasses/: AABB.cpp  AABB.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraFrame.cpp  CameraFrame.h  ColorTemplate.cpp  ColorTemplate.h  CommonClasses.cpp  CommonClasses.vcxproj  CommonClasses.vcxproj.filters  CommonTypes.h  CoordinateFrame.cpp  CoordinateFrame.h  DebugConfigs.cpp  DebugConfigs.h  DebugHelpers.h  DepthBuffer.cpp  DepthBuffer.h  EFloat.cpp  EFloat.h  EdgeEquation2D.cpp  EdgeEquation2D.h  F32Buffer.cpp  F32Buffer.h  Film.cpp  Film.h  Filter.cpp  Filter.h  FixPointNumber.cpp  FixPointNumber.h  Frame.cpp  Frame.h  GeomentryBuilder.cpp  GeomentryBuilder.h  Geometry.h  GraphicToolSet.cpp  (+56 more)
CommonClasses/Utils/: MTRandom.cpp  MTRandom.h  MathTool.h
CommonClasses/Utils/TestTool/: Case.h  ReadMe.md  Suit.h
FastCommandPrompt/: App.cpp  App.h  FastCommandPrompt.cpp  FastCommandPrompt.vcxproj  FastCommandPrompt.vcxproj.filters  ImguiWrapImageDX11.cpp  ImguiWrapImageDX11.h  controller.lua  imgui.ini  initialize.lua
ForCommonClasses/: ForCommonClasses.cpp  ForCommonClasses.vcxproj  ForCommonClasses.vcxproj.filters  ReadMe.md  stdafx.cpp
OutputTestImage/Rasterisation/OldImgs/: comparisonBetweenTwoBresenhamAlgorithm.xlsx
OutputTestImage/Rasterisation/OldImgs/PiplineTest/PiplineClippingLines/: descript.ion
RasterizeTest/: RasterizeTest.cpp  RasterizeTest.vcxproj  RasterizeTest.vcxproj.filters  ReadMe.md  stdafx.cpp
RasterizeTest/OutputTestImage/PiplineTest/TriangleTest/: ReadMe.md
RenderTest/: ReadMe.md  RenderTest.cpp  RenderTest.vcxproj  RenderTest.vcxproj.filters  stdafx.cpp
TestBasicTypes/: ReadMe.md  TestBasicTypes.cpp  TestBasicTypes.vcxproj  TestBasicTypes.vcxproj.filters  stdafx.cpp
TestCasesInSuits/: BaseToolForCaseAndSuit.cpp  BaseToolForCaseAndSuit.h  CMakeLists.txt  CaseAndSuitForCommonClasses.cpp  CaseAndSuitForCommonClasses.h  CaseAndSuitForDepthBuffer.h  CaseAndSuitForFilter.cpp  CaseAndSuitForFilter.h  CaseAndSuitForRasterisation.cpp  CaseAndSuitForRasterisation.h  CaseAndSuitForRasterizeTriangle.cpp  CaseAndSuitForRasterizeTriangle.h  CaseAndSuitForRayRender.cpp  CaseAndSuitForRayRender.h  CaseAndSuitForRayRender.h.cpp  CaseAndSuitForStbImage.cpp  CaseAndSuitForStbImage.h  CommonHeaders.h  ReadMe.md  TestBasicTypesSuit.h  TestCasesInSuits.cpp  TestCasesInSuits.vcxproj  TestCasesInSuits.vcxproj.filters  stdafx.cpp
TestGui/: AbstractGui.cpp  AbstractGui.h  App.cpp  App.h  BaseFrame.cpp  CMakeLists.txt  ImguiWrapImageDX11.cpp  ImguiWrapImageDX11.h  MinimalLuaInterpreter.cpp  MinimalLuaInterpreter.h  RasterizeGui.cpp  RasterizeGui.h  ReadMe.md  controller.lua  initialize.lua
TestSuit/: Case.cpp  Case.h  Method.cpp  Method.h  Miscellaneous.h  ReadMe.md  Suit.cpp  Suit.h  TestSuit.cpp  TestSuit.vcxproj  TestSuit.vcxproj.filters  TestTools.h
TriangleRasterizeTest/: ReadMe.md  TriangleRasterizeTest.cpp  TriangleRasterizeTest.vcxproj  TriangleRasterizeTest.vcxproj.filters  stdafx.cpp
